--- a/public/index.html
+++ b/public/index.html
@@ -170,14 +170,14 @@
                         <section class="layout-row layout-margin-dull">
                             <section class="layout-block layout-col-3"></section>
                             <section class="layout-col-9 layout-padding-small">
-                                <div class="layer-tile layer-box layer-surface layer-shadow--1 layout-block">
+                                <div class="layer-tile layer-box layer-surface layout-block">
                                     <section class="layer-tile-footer"></section>
                                 </div>
                             </section>
                         </section>
                         <section class="layout-row layout-margin-dull">
                             <section class="layout-col-9 layout-padding-small layout-padding-vert-large">
-                                <div class="layer-tile layer-box layer-surface layer-shadow--1 layout-block">
+                                <div class="layer-tile layer-box layer-surface layout-block">
                                     <div class="layer-image">
                                         <div class="load-img">
                                             <div class="img-contain">
@@ -209,7 +209,7 @@
                 <section class="layer-main"><span class="style-line-height-double">
                         <section class="layout-row layout-margin-dull">
                             <section class="layout-col-12 layout-padding-dull">
-                                <div class="layer-tile layer-box layer-box-flat layer-box-tall layer-surface layer-shadow--2 layout-block">
+                                <div class="layer-tile layer-box layer-box-flat layer-box-tall layer-surface layout-block">
                                     <section class="layer-tile-footer"></section>
                                 </div>
                             </section>
