--- a/public/contact.html
+++ b/public/contact.html
@@ -3,12 +3,31 @@
 
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta http-equiv="Accept-CH" content="DPR, Viewport-Width, Width">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="Cache-Control" content="public, s-max-age=31536000">
-    <meta http-equiv="Content-Security-Policy" content="default-src https: 'self'; font-src data: 'self' https://fonts.gstatic.com/; style-src 'self' 'unsafe-inline'; img-src data: 'self' https://res.cloudinary.com/okikio-assets/; script-src https://polyfill.io/ https://cdnjs.cloudflare.com/ 'self' 'unsafe-inline' 'unsafe-eval'; connect-src 'self' * blob: ws:; upgrade-insecure-requests">
+    <meta http-equiv="Content-Security-Policy" content="default-src https: 'self'; font-src data: 'self' https://fonts.gstatic.com/; style-src 'self' 'unsafe-inline'; img-src data: 'self' https://res.cloudinary.com/okikio-assets/ https://www.josephojo.com/; 
+    script-src https://polyfill.io/ https://cdnjs.cloudflare.com/ 'self' 'unsafe-inline' 'unsafe-eval'; connect-src 'self' * blob: ws:; upgrade-insecure-requests">
+    <meta name="robots" content="all">
+    <meta name="title" content="Contact">
+    <meta name="DC.title" content="Contact">
+    <meta name="HandheldFriendly" content="true">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="Description" content="The porfolio of Joseph, it contains all amazing projects etc...">
+    <meta name="shortlink" content="https://www.josephojo.com/contact">
+    <meta name="canonical" content="https://www.josephojo.com/contact">
+    <meta name="keywords" content="Joseph Ojo, josephojo, josephojo.com, joseph, ojo, portfolio, engineer, web, mechatronics, website, netlify">
+    <meta property="og:type" content="website">
+    <meta property="article:author" content="Joseph Ojo">
+    <meta property="og:site_name" content="josephojo.com">
+    <meta property="og:title" content="Contact - josephojo.com">
+    <meta property="og:url" content="https://www.josephojo.com/contact">
+    <meta itemprop="name" content="Contact - josephojo.com">
+    <meta itemprop="image" content="https://www.josephojo.com/android-icon-192x192.png">
+    <meta name="description" content="The porfolio of Joseph, it contains all amazing projects etc...">
+    <meta itemprop="description" content="The porfolio of Joseph, it contains all amazing projects etc...">
+    <meta property="og:description" content="The porfolio of Joseph, it contains all amazing projects etc...">
+    <title>Contact</title>
     <link rel="preconnect" href="https://res.cloudinary.com/okikio-assets/" crossorigin="">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
     <link rel="preconnect" href="https://cdnjs.cloudflare.com/" crossorigin="">
@@ -22,15 +41,13 @@
     <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
     <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-    <link rel="prefetch" href="manifest.webmanifest" as="fetch" crossorigin="">
-    <link rel="prefetch" href="/favicon-32x32.png" as="image" crossorigin="">
-    <link rel="prefetch" href="/android-icon-144x144.png" as="image" crossorigin="">
     <link rel="icon" type="image/png" sizes="512x512" href="/android-icon-512x512.png">
     <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="manifest.webmanifest">
+    <link rel="home" href="https://www.josephojo.com/">
     <meta name="theme-color" content="#4500ff">
     <meta name="msapplication-TileColor" content="#4500ff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
@@ -38,15 +55,17 @@
     <link rel="preload" href="https://fonts.gstatic.com/s/montserrat/v14/JTURjIg1_i6t8kCHKm45_dJE3gnD_g.woff2" as="font" type="font/woff2" crossorigin="">
     <link rel="preload" href="https://fonts.gstatic.com/s/montserrat/v14/JTURjIg1_i6t8kCHKm45_c5H3gnD_g.woff2" as="font" type="font/woff2" crossorigin="">
     <link rel="preload" href="https://fonts.gstatic.com/s/roboto/v20/KFOmCnqEu92Fr1Mu4mxK.woff2" as="font" type="font/woff2" crossorigin="">
-    <link rel="preload" href="https://fonts.gstatic.com/s/varelaround/v12/w8gdH283Tvk__Lua32TysjIfp8uP.woff2" as="font" type="font/woff2" crossorigin="">
+    <link rel="prefetch" href="https://fonts.gstatic.com/s/varelaround/v12/w8gdH283Tvk__Lua32TysjIfp8uP.woff2" as="font" type="font/woff2" crossorigin="">
     <link rel="stylesheet" href="./css/app.min.css" inline="" async="">
+    <script src="https://polyfill.io/v3/polyfill.min.js?flags=gated&amp;features=default%2Ces7%2CHTMLPictureElement%2CObject.values%2Cfetch%2CgetComputedStyle%2CrequestAnimationFrame%2Cdocument.getElementsByClassName%2CWebAnimations%2Cperformance.now%2CIntersectionObserver" crossorigin="" async=""></script>
     <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/nwmatcher/1.4.2/nwmatcher.min.js" async></script><script src="https://cdnjs.cloudflare.com/ajax/libs/json2/20160511/json2.min.js" async></script><script src="https://cdnjs.cloudflare.com/ajax/libs/selectivizr/1.0.2/selectivizr-min.js" async></script><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" async></script><script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js" async></script><script src="https://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.5.13/es5-shim.min.js" async></script><![endif]-->
     <!--[if lt IE 10]><script src="https://cdnjs.cloudflare.com/ajax/libs/flexibility/2.0.1/flexibility.js" async></script><script>flexibility(document.documentElement);</script><![endif]-->
     <script> var check = function() { "use strict"; if (typeof window.Symbol == "undefined") return false; try { Function("class Foo {}")(); Function("let bar = x => x+1;")(); Function("let bez = { a: 'b' }; let box = { b: 'a', ...bez };")(); } catch (e) { return false; } return true; }; var _require = function(src, fn) { var head = document.getElementsByTagName('head')[0]; var script = document.createElement('script'); script.setAttribute("async", ""); script.type = 'text/javascript'; script.onload = fn; script.onreadystatechange = function() { if (this.readyState === 'complete') { fn(); } }; script.src = src; head.appendChild(script); }; if (/msie|trident|edge/g.test(navigator.userAgent.toLowerCase()) || !check()) { _require("https://cdnjs.cloudflare.com/ajax/libs/picturefill/3.0.3/picturefill.min.js"); _require("https://cdnjs.cloudflare.com/ajax/libs/html5-history-api/4.2.10/history.min.js"); _require("https://cdnjs.cloudflare.com/ajax/libs/html5-history-api/4.2.10/history.ielte7.min.js"); } </script>
-    <title>Contact</title>
 </head>
 
 <body>
+    <div itemscope="" itemtype="https://schema.org/Article" style="display: none" hidden="">
+        <meta itemprop="url" content="https://www.josephojo.com/contact"><span itemprop="name" content="Contact - josephojo.com">by <span itemprop="author">Joseph Ojo<div itemscope="" itemtype="https://schema.org/Person"><img itemprop="image" src="https://www.josephojo.com/android-icon-192x192.png" alt="The logo for josephojo.com"><span itemprop="email">laoluojo@gmail.com</span><span itemprop="description">The porfolio of Joseph, it contains all amazing projects etc...</span><span itemtype="https://schema.org/EducationalOrganization" itemprop="alumniOf">OnTech - Ontario Tech University</span><a href="https://www.linkedin.com/in/o-josephojo/" itemprop="url">linkedin </a></div></span></span></div>
     <header class="header">
         <nav class="navbar navbar-fixed">
             <article class="layout-contain-large navbar-layout">
@@ -128,7 +147,6 @@
             </div>
         </article>
     </div>
-    <script src="https://polyfill.io/v3/polyfill.min.js?flags=gated&amp;features=default%2Ces7%2CHTMLPictureElement%2CObject.values%2Cfetch%2CgetComputedStyle%2CrequestAnimationFrame%2Cdocument.getElementsByClassName%2CWebAnimations%2Cperformance.now%2CIntersectionObserver" crossorigin="" async=""></script>
     <script src="./js/app.modern.min.js" inline="" async=""></script>
 </body>
 
