--- a/public/contact.html
+++ b/public/contact.html
@@ -109,10 +109,10 @@
                     </div>
                     <section class="layout-enlarge layout-flex layout-align-items-center layout-justify-content-center">
                         <div class="layer-content style-center">
-                            <section class="layer-header"></section>
-                            <section class="layer-main">
+                            <section class="layer-header">
                                 <h1 class="style-font-title layer-title style-white style-font-weight-bolder">Contact.</h1>
                             </section>
+                            <section class="layer-main"></section>
                             <section class="layer-footer layout-align-self-end"><a class="btn layer-round layout-padding-small layer-tertiary layer-shadow layer-secondary-hover layer-tertiary-dark-focus style-secondary style-hover-tertiary layer-hero-scroll-down"><span class="btn-group"><svg width="24" height="24" viewBox="0 0 24 24" fill="currentcolor" class="icon style-font-sz-36" inline=""><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z "></path></svg></span></a></section>
                         </div>
                     </section>
